@@ -1,7 +1,11 @@
 
+import javax.swing.*;
+import javax.swing.filechooser.FileSystemView;
 import java.io.*;
 import java.lang.ProcessBuilder.Redirect;
 import java.net.URISyntaxException;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.*;
 
 public final class AccountLauncher {
@@ -37,48 +41,50 @@ public final class AccountLauncher {
 		if(!address.equals(lastName) || System.currentTimeMillis() > (lastStartup + 1000 * 120)) {
 			lastName = address;
 			lastStartup = System.currentTimeMillis();
-		System.out.println("Starting");
-		ProcessBuilder linuxBuilder = new ProcessBuilder("/bin/bash", "-c",
-				"java -jar " + "." + "./rspeer-launcher.jar" + " " + address);
+			System.out.println("Starting");
+			ProcessBuilder linuxBuilder = new ProcessBuilder("/bin/bash", "-c",
+					"java -jar " + "." + "./rspeer-launcher.jar" + " " + address);
 
 			ProcessBuilder windowsBuilder = new ProcessBuilder("cmd.exe", "/c",
-					"java -jar " +  "./rspeer-launcher.jar" + " " + address);
+					"java -jar " + getRSPeerJar() + " -qsArgs " + address);
 			windowsBuilder.inheritIO();
+
 			ProcessBuilder macBuilder = new ProcessBuilder("osascript", "-e",
-					"tell application \"Terminal\" to do script \"java -jar " +  "./rspeer-launcher.jar" + " " + address);
+					"tell application \"Terminal\" to do script \"java -jar " + "./rspeer-launcher.jar" + " " + address);
 			Process p = null;
 			try {
 				//System.out.println(AccountLauncher.getOperatingSystemType());
 				switch (AccountLauncher.getOperatingSystemType()) {
 
-				case Windows:
-					int i = 1;
-					System.out.println("Start windows");
-					p = windowsBuilder.start();
-					setOutputStream(p);
+					case Windows:
+						int i = 1;
+						System.out.println("Start windows");
+						p = windowsBuilder.start();
+						setOutputStream(p);
 
-					break;
-				case MacOS:
-					//Process p2 = macBuilder.start();
-					p = Runtime.getRuntime().exec("java -jar rspeer-launcher.jar " + address);
-					setOutputStream(p);
-					break;
-				case Linux:
-					System.out.println("lets go linux");
-					p = linuxBuilder.start();
-					if(new File(curDir() + "/layout.sh").exists()) {
-						try {
-							Thread.sleep(1000);
-							String[] cmd = new String[]{"/bin/sh", curDir() + "/layout.sh"};
-							Process pr = Runtime.getRuntime().exec(cmd);
-						}catch (Exception ex) { }
-					}
-					setOutputStream(p);
-					break;
+						break;
+					case MacOS:
+						//Process p2 = macBuilder.start();
+						p = Runtime.getRuntime().exec("java -jar rspeer-launcher.jar " + address);
+						setOutputStream(p);
+						break;
+					case Linux:
+						System.out.println("lets go linux");
+						p = linuxBuilder.start();
+						if (new File(curDir() + "/layout.sh").exists()) {
+							try {
+								Thread.sleep(1000);
+								String[] cmd = new String[]{"/bin/sh", curDir() + "/layout.sh"};
+								Process pr = Runtime.getRuntime().exec(cmd);
+							} catch (Exception ex) {
+							}
+						}
+						setOutputStream(p);
+						break;
 				}
 			} catch (Exception ex) {
 				ex.printStackTrace();
-				if(p != null && p.isAlive()) {
+				if (p != null && p.isAlive()) {
 					System.out.println("DESTROYYYYYY");
 					p.destroy();
 				}
@@ -106,6 +112,14 @@ public final class AccountLauncher {
 			e.printStackTrace();
 		}
 		return "";
+	}
+	public static String getRSPeerJar(){
+		if(runningprocesses.size() == 0)
+			return "./rspeer-launcher.jar";
+		JFileChooser fr = new JFileChooser();
+		FileSystemView fw = fr.getFileSystemView();
+		return "-Xmx384m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -Xss2m -Dsun.java2d.noddraw=true -Xincgc " +
+				Paths.get(fw.getDefaultDirectory().toString(), "RSPeer", "cache", "rspeer.jar").toString();
 	}
 
 	public static void setOutputStream(Process process) {
